--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,25 +6,29 @@
   --app-bg-color: #f5f5f5;
   --app-text-color: #333;
 
-  --select-bg-color: lightgray;
-  --select-text-color: var(--app-text-color);
+  --btn-bg-color: lightgray;
+  --btn-text-color: var(--app-text-color);
 
   --border-color: #ccc;
 
   --navbar-bg-color: var(--app-bg-color);
 
   --toggle-bar-bg-color: var(--app-text-color);
+
   --header-height: 4rem;
 
   --bg-blurred-color: #00000080;
+
+  --link-btn-bg-color: #bdbdbd;
+  --link-btn-text-color: #fff;
 }
 
 :root.dark {
   --app-bg-color: #333;
   --app-text-color: #fff;
 
-  --select-bg-color: #666;
-  --select-text-color: var(--app-text-color);
+  --btn-bg-color: #777;
+  --btn-text-color: var(--app-text-color);
 
   --border-color: #555;
 
@@ -82,6 +86,6 @@ input[type='radio'] {
 }
 
 label.active {
-  background-color: var(--select-bg-color);
+  background-color: var(--btn-bg-color);
   border-radius: 50%;
 }
