Update Prettier configuration, Next.js configuration, and CSS styles***
***Delete unused components and hooks***

***Update Footer component styles***

***Update useLanguage hook***

***Update Tailwind CSS configuration

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,7 +67,7 @@
 
 #toggle-button::before,
 #toggle-button::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 1.6rem;
   height: 0.125rem;
@@ -114,6 +114,6 @@ select {
   background-color: unset;
 }
 
-input[type='radio'] {
+input[type="radio"] {
   display: none;
 }
